1 Implemented In Progress Transaction Api. 2 Implemented Load more for In Progress Transaction Screen 3 Implemented Swipe to refresh for In Progress Transaction Screen 4 Implemented Completed Transaction Api. 5 Implemented Load more for Completed Transaction Screen 6 Implemented Swipe to refresh for Completed Transaction Screen 7 Implemented Upcoming Transaction Api. 8 Implemented Load more for Upcoming Transaction Screen 9 Implemented Swipe to refresh for Upcoming Transaction Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -688,5 +688,7 @@
     <string name="select_bank_use">Use Selected Bank</string>
     <string name="failed">Failed</string>
     <string name="remarks_">Remarks:</string>
+    <string name="no_data_found">No data found.</string>
+    <string name="status_">Status:</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
