--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -695,5 +695,8 @@
     <string name="select_end_date">Select End Date</string>
     <string name="no_data_found">No data found.</string>
     <string name="status_">Status:</string>
+    <string name="alert_bank_default">Are you sure to make this bank as the default?</string>
+
+
     <!--<string name="select_country">Select Country</string>-->
 </resources>
