--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="why_tarrakki">Why Tarrakki ?</string>
     <string name="view_all">View All</string>
     <string name="portfolio_value">Portfolio Value</string>
-    <string name="dummy">\u20B93,246</string>
+    <string name="dummy">\u20B93,24666666666666888888888</string>
     <string name="dummy1">\u20B95,000,00</string>
     <string name="dummy2">+\u20B936.17</string>
     <string name="dummy3">\u20B91,583</string>
