--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -550,7 +550,7 @@
     <string name="download_mandate_form">Download Mandate Form</string>
     <string name="download_bank_form_description">Download the bank mandate form and fill out your details to set up Auto- Payments. This form allows secure auto-debiting of a specified amount of money towards your SIP, to create an easier investment experience for you.</string>
     <string name="upload_scanned_form">Upload Scanned Mandate</string>
-    <string name="upload_scanned_form_description">Once you have filled out the bank mandate form, please scan the form and upload it.</string>
+    <string name="upload_scanned_form_description">Once you have filled out the bank mandate form, please scan the form and upload it.\nIn case your phone has a low quality camera, please download the CAMSCanner or Office Lens App from the Google Play Store, to scan the Bank Mandate.</string>
     <string name="bank_mandate_preview">Bank Mandate Preview</string>
     <string name="please_look_at_the_pre_filled">Please look at the pre-filled Bank Mandate carefully to verify that all the in-formation is correct. Download the Bank Mandate and Print.</string>
     <string name="sign_scan_and_upload">Sign, Scan, and Upload.</string>
