--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
+
     <string name="app_name">Tarrakki</string>
+
+    <!--Facebook Details-->
+    <string name="facebook_app_id">387985278434317</string>
+    <string name="fb_login_protocol_scheme">fb387985278434317</string>
+    <!--End Facebook Details-->
+
     <string name="mutual_funds">Mutual Funds</string>
     <string name="home">Home</string>
     <string name="plan">Plan</string>
